# cbw-integration-sys

./: docker-compose.yml  legacy-integration-agent.agent.md  models.py  readme.md
backend/: manage.py  pyproject.toml
backend/apps/analytics/: views.py
backend/apps/arena/: admin.py  apps.py  models.py  readme.md  serializers.py  urls.py  views.py
backend/apps/arena/integrations/: api_arena.py  authorization_arena.py  sge_rest_api.py
backend/apps/arena/migrations/: 0001_initial.py  0002_arenaclient_arenafight_arenasession_and_more.py  0003_remove_eventosarena_credencial_and_more.py  0004_tunnel.py  0005_rename_instance_id_tunnel_instance.py
backend/apps/arena/services/: arena_client.py  arena_handler.py  sge_handler.py  sync.py  webhook_handler.py
backend/apps/arena/utils/: maps.py
backend/apps/integration/: models.py  serializers.py  urls.py  views.py
backend/apps/integration/migrations/: 0001_initial.py  (+2 more)
backend/apps/live/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/normalization/: admin.py  apps.py  models.py  urls.py  views.py
backend/apps/sge/: apps.py  models.py  serializers.py  urls.py  views.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/docs/integration/: AGE_GROUP_MAPPING_GUIDE.md  README.md  cross_app_dependencies.md  external_integrations.md  models.md  serializers.md  services.md  views_and_urls.md
backend/template/eventos/: associate_arena_event.html  sge_list.html
backend/template/partials/: sidebar.html
backend/template/polls/: arena-web-hooking-show.html
frontend/: index.html  (+1 more)
(+55 files in other folders)
